SAD-14: Add documentation for Upload and add Configs.
